--- a/myweb2.html
+++ b/myweb2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="myweb.html">Welcome to Polandball informations website</a></h1>
+<h1><a href="index.html">Welcome to Polandball informations website</a></h1>
   <ol>
     <li><a href="myweb2.html">Polandball rules</a></li>
     <li><a href="myweb3.html" style="color:red; text-decoration:underline">Polandball exceptions and other informations</a></li>
