--- a/myweb2.html
+++ b/myweb2.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Polandball rule</title>
+  <title>Polandball rules</title>
   <meta charset="utf-8">
+  <script
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 <body>
 <h1><a href="index.html">Welcome to Polandball informations website</a></h1>
-  <ol>
+<input id="night_day" type="button" value="night" onclick="
+nightDayHandler(this)
+">  <ol>
     <li><a href="myweb2.html">Polandball rules</a></li>
-    <li><a href="myweb3.html" style="color:red; text-decoration:underline">Polandball exceptions and other informations</a></li>
+    <li><a href="myweb3.html" style="color:red; text-decoration:underline">Polandball exceptions and other information</a></li>
   </ol>
  <h1>Polandball Rules</h1>
  <img src="countryballs.png" width="15%">
@@ -26,5 +31,6 @@
     So In summary
     just do not add other body parts except eyes without pupils and Draw yourself without tools and draw Poland upside down and do not use adcanced image
     But Some balls have exceptions
+  <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:미믹킨</a>
   </body>
 </html>
