--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         <p>
 
 
-          maker:폴메믹큐
+        <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
 </body>
 </html>
