--- a/myweb3.html
+++ b/myweb3.html
@@ -37,6 +37,8 @@
       <li>I said about Poland before so  I  will pass</li>
       <li>Indonesia often wears a rice hat or peci and Monaco often wears Sunglasses</li>
       <li>Chad's eye is 8ball</li>
+        
+      <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
       <input type="button" value="night" onclick="
       nightDayHandler(this)
     ">
