--- a/myweb3.html
+++ b/myweb3.html
@@ -39,8 +39,7 @@
       <li>Chad's eye is 8ball</li>
         
       <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
-      <br<<input type="button" value="night" onclick="
-      nightDayHandler(this)
-    ">
+      <br<input type="button" value="night" onclick="
+      nightDayHandler(this)">
 </body>
 </html>
