--- a/myweb3.html
+++ b/myweb3.html
@@ -39,7 +39,8 @@
       <li>Chad's eye is 8ball</li>
         
       <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
-      <br<input type="button" value="night" onclick="
+      
+      <input type="button" value="night" onclick="
       nightDayHandler(this)">
 </body>
 </html>
