--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </ol>-->
   <h2>Polandballmeme</h2>
   <img src="v.jpg">
-  <p><a href="https://polandball.fandom.com/wiki/Polandball_(meme)" target="_blank" title="Polandballmeme">
+  <p><a href="https://www.polandballwiki.com/wiki/Polandball_(meme)" target="_blank" title="Polandballmeme">
       <font color="Red">Polandball</font>
     </a></font> is one of the world greatest meme
     <strong>Make the coutnries to balls<strong> and make cartoons etc.
