--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Polandball</title>
   <meta charset="utf-8">
@@ -19,14 +18,14 @@
   <script>
     var Contents = ['Polandball rules', 'Polandball exceptions and other information']
   </script>
-  <ol>
+  <ul>
     <h3>
       <li><a href="myweb2.html" class="saw">Polandball rules</a></li>
     </h3>
     <h3>
       <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
     </h3>
-  </ol>
+  </ul>
   <!-- 주석처리는 꺾세!-- --꺾세이다. -->
   <!--<h1><a href="myweb.html"><font color="red">Welcome to Polandball guide website</font></a></h1>
     <ol>
@@ -37,32 +36,13 @@
   <img src="v.jpg">
   <p><a href="https://www.polandballwiki.com/wiki/Polandball_(meme)" target="_blank" title="Polandballmeme">
       <font color="Red">Polandball</font>
-    </a></font> is one of the world greatest meme
+    </a></font> is one of the influencial memes
     <strong>Make the coutnries to balls<strong> and make cartoons etc.
         And now many countries are made with balls<br>We call this coutryballs
-        <p>But Polandball has some rules <br>Watch it 'Polandball rules'
+        <p>But Polandball has some rules <br>Visit 'Polandball rules'
         <p>
 
 
-        <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
-          <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://https-rekin2009-github-io-polandballinfo.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          maker:미믹킨
 </body>
 </html>
