--- a/myweb2.html
+++ b/myweb2.html
@@ -10,11 +10,15 @@
 <body>
 <h1><a href="index.html">Welcome to Polandball informations website</a></h1>
 <input id="night_day" type="button" value="night" onclick="
-nightDayHandler(this)
-">  <ol>
-    <li><a href="myweb2.html">Polandball rules</a></li>
-    <li><a href="myweb3.html" style="color:red; text-decoration:underline">Polandball exceptions and other information</a></li>
-  </ol>
+nightDayHandler(this)">
+<ul>
+  <h3>
+    <li><a href="myweb2.html" class="saw">Polandball rules</a></li>
+  </h3>
+  <h3>
+    <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
+  </h3>
+</ul>
  <h1>Polandball Rules</h1>
  <img src="countryballs.png" width="15%">
   <p>As I said There are many Polandball exceptions and rules <br>and I made a list
@@ -31,6 +35,7 @@ nightDayHandler(this)
     So In summary
     just do not add other body parts except eyes without pupils and Draw yourself without tools and draw Poland upside down and do not use adcanced image
     But Some balls have exceptions
+  <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:미믹킨</a>
   <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
   <div id="disqus_thread"></div>
 <script>
