--- a/myweb3.html
+++ b/myweb3.html
@@ -12,10 +12,14 @@
   <input type="button" value="night" onclick="
   nightDayHandler(this)
 ">
-  <ol>
-    <li><a href="myweb2.html">Polandball rules</a></li>
-    <li><a href="myweb3.html">Polandball exceptions and other information</a></li>
-  </ol>
+<ul>
+  <h3>
+    <li><a href="myweb2.html" class="saw">Polandball rules</a></li>
+  </h3>
+  <h3>
+    <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
+  </h3>
+</ul>
   <h2>Polandball exceptions and other information</h2>
     Well as I said Polandball(Coutnryballs)has many rules
     But There is some exceptions
@@ -37,10 +41,9 @@
       <li>I said about Poland before so  I  will pass</li>
       <li>Indonesia often wears a rice hat or peci and Monaco often wears Sunglasses</li>
       <li>Chad's eye is 8ball</li>
-        
-      <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
-      
       <input type="button" value="night" onclick="
-      nightDayHandler(this)">
+      nightDayHandler(this)
+    ">
 </body>
 </html>
+  
