--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>
 
 
-          maker:미믹킨
+          maker:폴메믹큐
           <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
