--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <h3>
       <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
     </h3>
+    <h3>
+    <li><a href="myweb4.html" class="saw">Other Polandball websites</a></li>
+  </h3>
   </ul>
   <!-- 주석처리는 꺾세!-- --꺾세이다. -->
   <!--<h1><a href="myweb.html"><font color="red">Welcome to Polandball guide website</font></a></h1>
