--- a/myweb2.html
+++ b/myweb2.html
@@ -18,6 +18,9 @@ nightDayHandler(this)">
   <h3>
     <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
   </h3>
+  <h3>
+    <li><a href="myweb4.html" class="saw">Other Polandball websites</a></li>
+  </h3>
 </ul>
  <h1>Polandball Rules</h1>
  <img src="countryballs.png" width="15%">
