--- a/myweb3.html
+++ b/myweb3.html
@@ -19,6 +19,9 @@
   <h3>
     <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
   </h3>
+  <h3>
+    <li><a href="myweb4.html" class="saw">Other Polandball websites</a></li>
+  </h3>
 </ul>
   <h2>Polandball exceptions and other information</h2>
     Well as I said Polandball(Coutnryballs)has many rules
