--- a/myweb4.html
+++ b/myweb4.html
@@ -18,6 +18,9 @@
     <h3>
       <li><a href="myweb3.html" class="saw">Polandball exceptions and other information</a></li>
     </h3>
+    <h3>
+    <li><a href="myweb4.html" class="saw">Other Polandball websites</a></li>
+  </h3>
   </ul>
     <ul>
       <li><a href="https://www.reddit.com/r/polandball/">PolandballRedit(Eng)</a></li>
