--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <font color="Red">Polandball</font>
     </a></font> is one of the influencial memes
     <strong>Make the coutnries to balls<strong> and make cartoons etc.
-        And now many countries are made with balls<br>We call this coutryballs
+      We call this to <font color="Red">Countryballs</font>
         <p>But Polandball has some rules <br>Visit 'Polandball rules'
         <p>
 
