--- a/myweb2.html
+++ b/myweb2.html
@@ -27,16 +27,16 @@ nightDayHandler(this)">
   <p>As I said There are many Polandball exceptions and rules <br>and I made a list
     <ol>
       <li>Do Not Add pupils and other body parts</li>
-      <li>Do not Add mouth ears</li>
-      <li>Do not Use Round tool</li>
+      <li>Do not Add mouth and ears</li>
+      <li>Do not Use the perfect round</li>
       <li>Do not let Poland into space</li>
-      <li>Do not use Polish flag correctly</li>
+      <li>Draw Polish flag unpside-down</li>
       <li>Do not draw non-country things to balls</li>
-      <li>Do not use advanced image</li>
+      <li>Do not use the used images<li>
     </ol>
     Well There are many rules to draw Polandball
     So In summary
-    just do not add other body parts except eyes without pupils and Draw yourself without tools and draw Poland upside down and do not use adcanced image
+    just do not add other body parts except eyes without pupils and Draw yourself without perfect round and draw Poland upside down and do not use the used image
     But Some balls have exceptions
   <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
   <div id="disqus_thread"></div>
