--- a/myweb3.html
+++ b/myweb3.html
@@ -33,14 +33,14 @@
       <li>Kazakhstan is a brick</li>
       <li>British Colony Singapore and Singapore and Bermuda and Nariñoball are Triangle a.k.a Tringapore BermudaTriangle and Nariñotriangle</li>
       <li>Biliard balls are ancient civilizations and aileans or sometimes different race,tribes
-        1ball can be used to SouthEast Asians<br>
-        2ball can be used to Europeans<br>
-        3ball can be used to native Americans including s including Shoshone, Cherokee, Navajo, the Mayans, Aztecs and Incas<br>
-        4ball can be used to Prehistoric peoples<br>
-        5ball formerly describing natives of Austrailia<br>
-        6ball can be used to aileans<br>
-        7ball can be used to Native Islanders<br>
-        8ball,depicting Sub-Saharan or Native Africans or Africans without flags or African. minorities. On the flag of the Olympic Games, the black color represents Africa.</li>
+        1ball is for SouthEast Asians<br>
+        2ball is for Europeans<br>
+        3ball is for native Americans including s including Shoshone, Cherokee, Navajo, the Mayans, Aztecs and Incas<br>
+        4ball is for Prehistoric peoples<br>
+        5ball is for formerly describing natives of Austrailia<br>
+        6ball is for aileans<br>
+        7ball is for Native Islanders<br>
+        8ball is for Sub-Saharan or Native Africans or Africans without flags or African. minorities. On the flag of the Olympic Games, the black color represents Africa.</li>
       <li>I said about Poland before so  I  will pass</li>
       <li>Indonesia often wears a rice hat or peci and Monaco often wears Sunglasses</li>
       <li>Chad's eye is 8ball</li>
