--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><a href="myweb2.html"><font color="red">Polandball rules</font></a></li>
       <li><a href="myweb3.html"><font color="red">Polandball exceptions</font></a></li>
     </ol>-->
-  <h2>Polandballmeme</h2>
+  <h2>Polandball</h2>
   <img src="v.jpg">
   <p><a href="https://www.polandballwiki.com/wiki/Polandball_(meme)" target="_blank" title="Polandballmeme">
       <font color="Red">Polandball</font>
