--- a/myweb3.html
+++ b/myweb3.html
@@ -29,7 +29,7 @@
     And here is a list
     <img src="countryballs.png" width="5*2%">
     <ol>
-      <li>Reich is rectangle <s>Anschluss!</s></li>
+      <li>Reich is rectangle</li>
       <li>Kazakhstan is a brick</li>
       <li>British Colony Singapore and Singapore and Bermuda and Nariñoball are Triangle a.k.a Tringapore BermudaTriangle and Nariñotriangle</li>
       <li>Biliard balls are ancient civilizations and aileans or sometimes different race,tribes
