--- a/myweb2.html
+++ b/myweb2.html
@@ -24,20 +24,14 @@ nightDayHandler(this)">
 </ul>
  <h1>Polandball Rules</h1>
  <img src="countryballs.png" width="15%">
-  <p>As I said There are many Polandball exceptions and rules <br>and I made a list
+  <p><h2>Exceptions & extra rules</h2><br>
     <ol>
-      <li>Do Not Add pupils and other body parts</li>
-      <li>Do not Add mouth and ears</li>
-      <li>Do not Use the perfect round</li>
-      <li>Do not let Poland into space</li>
-      <li>Draw Polish flag unpside-down</li>
+      <li>Adding pupils and other body parts to your balls is strictly banned</li>
+      <li>Uploading a cartoon which drew circles with the shaping tool, you're gonna be banned at most of polandball meme communities. You should "draw" circles</li>
+      <li>Polish flag should be drawn unpside-down</li>
       <li>Do not draw non-country things to balls</li>
-      <li>Do not use the used images<li>
+      <li>You should draw countryballs by yourself<li>
     </ol>
-    Well There are many rules to draw Polandball
-    So In summary
-    just do not add other body parts except eyes without pupils and Draw yourself without perfect round and draw Poland upside down and do not use the used image
-    But Some balls have exceptions
   <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
   <div id="disqus_thread"></div>
 <script>
