--- a/myweb2.html
+++ b/myweb2.html
@@ -24,13 +24,12 @@ nightDayHandler(this)">
 </ul>
  <h1>Polandball Rules</h1>
  <img src="countryballs.png" width="15%">
-  <p><h2>Exceptions & extra rules</h2><br>
     <ol>
       <li>Adding pupils and other body parts to your balls is strictly banned</li>
       <li>Uploading a cartoon which drew circles with the shaping tool, you're gonna be banned at most of polandball meme communities. You should "draw" circles</li>
       <li>Polish flag should be drawn unpside-down</li>
       <li>Do not draw non-country things to balls</li>
-      <li>You should draw countryballs by yourself<li>
+      <li>You should draw countryballs by yourself</li>
     </ol>
   <br><br><a href="https://github.com/rekin2009/Polandballinfo">maker:폴메믹큐</a>
   <div id="disqus_thread"></div>
